--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@
 #    pip-compile --output-file=requirements.txt requirements.in
 #
 click==7.1.2              # via flask
+dnspython==2.0.0          # via -r requirements.in
 flask-httpauth==4.2.0     # via -r requirements.in
 flask-wtf==0.14.3         # via -r requirements.in
 flask==1.1.2              # via -r requirements.in, flask-httpauth, flask-wtf
