--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ gunicorn==20.0.4          # via -r requirements.in
 itsdangerous==1.1.0       # via flask, flask-wtf
 jinja2==2.11.2            # via -r requirements.in, flask
 markupsafe==1.1.1         # via jinja2, wtforms
+marshmallow==3.10.0       # via -r requirements.in
 mongoengine==0.22.1       # via -r requirements.in
 pendulum==2.1.2           # via -r requirements.in
 pymongo==3.11.2           # via mongoengine
