--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,10 @@ indent_style = space
 indent_size = 4
 max_line_length = 88
 
+[{*.html,*.css,*.js}]
+indent_style = space
+indent_size = 2
+
 # Tab indentation (no size specified)
 [Makefile]
 indent_style = tab
