--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,15 @@
 #
 #    pip-compile --output-file=requirements.txt requirements.in
 #
-blinker==1.6.3
+blinker==1.8.2
     # via flask
 click==8.1.7
     # via flask
-dnspython==2.4.2
+dnspython==2.6.1
     # via
     #   -r requirements.in
     #   pymongo
-flask==3.0.0
+flask==3.0.3
     # via
     #   -r requirements.in
     #   flask-httpauth
@@ -23,44 +23,48 @@ flask-wtf==1.2.1
     # via -r requirements.in
 funcy==2.0
     # via -r requirements.in
-gunicorn==21.2.0
+gunicorn==22.0.0
     # via -r requirements.in
-itsdangerous==2.1.2
+itsdangerous==2.2.0
     # via
     #   flask
     #   flask-wtf
-jinja2==3.1.2
+jinja2==3.1.4
     # via
     #   -r requirements.in
     #   flask
-markupsafe==2.1.3
+markupsafe==2.1.5
     # via
     #   jinja2
     #   werkzeug
     #   wtforms
-marshmallow==3.20.1
+marshmallow==3.21.2
     # via -r requirements.in
-mongoengine==0.27.0
+mongoengine==0.28.2
     # via -r requirements.in
-packaging==23.2
+packaging==24.0
     # via
     #   gunicorn
     #   marshmallow
-pendulum==2.1.2
+pendulum==3.0.0
     # via -r requirements.in
-pymongo==4.5.0
+pymongo==4.7.2
     # via mongoengine
-python-dateutil==2.8.2
-    # via pendulum
-python-dotenv==1.0.0
+python-dateutil==2.9.0.post0
+    # via
+    #   pendulum
+    #   time-machine
+python-dotenv==1.0.1
     # via -r requirements.in
-pytzdata==2020.1
-    # via pendulum
 six==1.16.0
     # via python-dateutil
-werkzeug==3.0.0
+time-machine==2.14.1
+    # via pendulum
+tzdata==2024.1
+    # via pendulum
+werkzeug==3.0.3
     # via flask
 whatever==0.7
     # via -r requirements.in
-wtforms==3.1.0
+wtforms==3.1.2
     # via flask-wtf
