Implement reading time overflow
When you read book for a few months, there are two ways to count pages:
- count all apges in the first month (old implementation)
- equally distribute pages over all months (new implementation)

--- a/ruff.toml
+++ b/ruff.toml
@@ -6,6 +6,7 @@ ignore = [
     'A003',  # class attribute is shadowing a Python builtin
     'SLF001',  # private member accessed
     'COM812', # trailing comma missing
+    'E731', # do not assign a `lambda` expression, use a `def`
 ]
 
 [flake8-quotes]
