--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,10 @@ blinker==1.8.2
     # via flask
 click==8.1.7
     # via flask
+contourpy==1.3.0
+    # via matplotlib
+cycler==0.12.1
+    # via matplotlib
 dnspython==2.6.1
     # via
     #   -r requirements.in
@@ -21,6 +25,8 @@ flask-httpauth==4.8.0
     # via -r requirements.in
 flask-wtf==1.2.1
     # via -r requirements.in
+fonttools==4.54.1
+    # via matplotlib
 funcy==2.0
     # via -r requirements.in
 gunicorn==22.0.0
@@ -33,6 +39,8 @@ jinja2==3.1.4
     # via
     #   -r requirements.in
     #   flask
+kiwisolver==1.4.7
+    # via matplotlib
 markupsafe==2.1.5
     # via
     #   jinja2
@@ -40,18 +48,30 @@ markupsafe==2.1.5
     #   wtforms
 marshmallow==3.21.2
     # via -r requirements.in
+matplotlib==3.9.2
+    # via -r requirements.in
 mongoengine==0.28.2
     # via -r requirements.in
+numpy==2.1.2
+    # via
+    #   contourpy
+    #   matplotlib
 packaging==24.0
     # via
     #   gunicorn
     #   marshmallow
+    #   matplotlib
 pendulum==3.0.0
     # via -r requirements.in
+pillow==10.4.0
+    # via matplotlib
 pymongo==4.7.2
     # via mongoengine
+pyparsing==3.2.0
+    # via matplotlib
 python-dateutil==2.9.0.post0
     # via
+    #   matplotlib
     #   pendulum
     #   time-machine
 python-dotenv==1.0.1
