Format code only with ruff

--- a/ruff.toml
+++ b/ruff.toml
@@ -1,4 +1,10 @@
-target-version = 'py311'
+target-version = 'py312'
+
+[format]
+quote-style = 'single'
+skip-magic-trailing-comma = true
+
+[lint]
 select = ['ALL']
 ignore = [
     'D',  # docstring rules
@@ -9,16 +15,13 @@ ignore = [
     'E731', # do not assign a `lambda` expression, use a `def`
 ]
 
-[flake8-quotes]
+[lint.flake8-quotes]
 inline-quotes = 'single'
 
-[isort]
+[lint.isort]
 combine-as-imports = true
+split-on-trailing-comma = false
 
-[format]
-quote-style = 'single'
-skip-magic-trailing-comma = true
-
-[per-file-ignores]
+[lint.per-file-ignores]
 'app/generate.py' = ['T201']
 'tests/*' = ['S101', 'PT013', 'PT004', 'RUF012', 'DTZ001']
