Update amvera.yml to runn app via uv

--- a/amvera.yml
+++ b/amvera.yml
@@ -3,5 +3,5 @@ meta:
   toolchain:
     name: docker
 run:
-  command: gunicorn --bind 0.0.0.0:5000 'bookworm:create_app()'
+  command: uv run gunicorn --bind 0.0.0.0:5000 'bookworm:create_app()'
   containerPort: 5000
